# pymxs

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.ipynb  README.md  build.rs  c_m_delta_elev_fits.yaml  cmadot.py  conda-spec.txt  data_analysis.mk  data_processing.mk  eigen_analysis.py  learned_output.csv  plot.py  prettyeqn.py  process_polymodel.py  process_run.py  process_run_noisy.py  process_seqrun.py  pymxs.def  shython  test.shy  testgym.py
XFLR/: MainWingRe250k.txt  T1-15_0 m_s-VLM1.txt
XFLR/NACA0012Polars/: NACA 0012_T1_Re0.100_M0.00_N9.0.txt  NACA 0012_T1_Re0.125_M0.00_N9.0.txt  NACA 0012_T1_Re0.175_M0.00_N9.0.txt  NACA 0012_T1_Re0.200_M0.00_N9.0.txt  NACA 0012_T1_Re0.225_M0.00_N9.0.txt  NACA 0012_T1_Re0.275_M0.00_N9.0.txt
analysis_scripts/: beta.py  big3.py  big3_all.py  clt_curve.py  common.py  elevator.py  elevator0.py  hs_plots.py  thrust.py
gym_mxs/: setup.py
gym_mxs/gym_mxs/: __init__.py  model.py
inertia/: get_inertia.py
inertia/Data/: .gitignore  20220318_143301723_iOS_ClampMass.heic  20220318_144735374_iOS_RollBatt.heic  20220318_145235735_iOS_RollBlocks.heic  20220318_145634509_iOS_Roll.heic  LoadCellTranscripts.xlsx  (+13 more)
models/: mxs.py  mxs_data.py
plotting/: plot.py  unified_plot.py
processing_scripts/: fit_analysis.py  get_coefficients.py  pitch_effects.py  process_04_05.py  process_04_06.py  process_04_07.py  process_11_0x.py  process_11_17.ipynb  process_11_17.py  process_11_18.ipynb  process_11_18.py  process_april.sh  process_november.sh  surface_effects.py  yaw_effects.py
src/: lib.rs  main.rs
xflr_data/: mxs.xfl
(+602 files in other folders)
