[package]
name = "mxsrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerso = { path = "../../pyaerso/aerso" }

[build-dependencies]
serde = "1.0"
serde_yaml = "0.8"
codegen = "0.1.3"

[lib]
name = "mxsrs"
path = "src/lib.rs"

[[bin]]
name = "mxsrs"
path = "src/main.rs"
